[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "template_maker"
author = "Sheik S Shajeen Ahamed"
author-email = "shajeenahmed@gmail.com"
home-page = "https://github.com/shajeen/template-maker"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"

[tool.flit.scripts]
template-maker = "template_maker.main:main"